# pypoman

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  __init__.py  chebyshev-center.html  developer-notes.html  duality.html  genindex.html  index.html  intersection.html  objects.inv  polygon.html  projection.html  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: chebyshev-center.doctree  developer-notes.doctree  duality.doctree  environment.pickle  index.doctree  intersection.doctree  polygon.doctree  projection.doctree  references.doctree
.github/workflows/: ci.yml  docs.yml  test.yml
_sources/: chebyshev-center.rst.txt  duality.rst.txt  polygon.rst.txt  references.rst.txt
_static/: conf.py  developer-notes.rst  environment.yaml  projection.rst
doc/: Makefile  conf.py  environment.yaml  index.rst
doc/src/: conf.py  developer-notes.rst  index.rst  intersection.rst
examples/: README.md  point_to_polytope_projection.py  polygon_chebyshev_center.py  polytope_projection.py  project_point_to_polytope.py  vertex_enumeration.py
pypoman/: __init__.py  bretl.py  duality.py  intersection.py  lp.py  misc.py  plot.py  polygon.py  polyhedron.py  projection.py
tests/: test_duality.py  test_halfspace_enumeration.py  test_intersection.py  test_lp.py  test_polygon.py  test_polyhedron.py  test_projection.py  test_vertex_enumeration.py
